java/java-tests/testData/codeInsight/daemonCodeAnalyzer/javaDoc/ValueNotOnField.java
class Test {
  /**
   * Value is {@value <error descr="@value tag must reference a field">#g</error>}
   */
  public void i() {}

  public void g() {}
}